--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.26.0",
+    "@vercel/blob": "^0.14.0",
     "autoprefixer": "10.4.14",
     "next": "13.5.4",
     "postcss": "8.4.31",
