--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@supabase/supabase-js": "^2.26.0",
     "@vercel/blob": "^0.14.0",
     "autoprefixer": "10.4.14",
-    "next": "13.5.4",
+    "next": "^13.5.5",
     "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
